# GRU_trade_engine

./: .gitignore  README.md  REQUIREMENTS_SUMMARY.md  automated_setup.sh  config.json  config_loader.py  gru_prediction.out  install.sh  interact.sh  interface.sh  main.py  requirements.txt  run.sh  sentiment_analysis.out  setup.sh  setup_&_install.sh  test.py  train.sh
algorithms/: requirements.txt
algorithms/gru_model/: __init__.py  gru_architecture.py  gru_object.py  loss_functions.py  train_gru.py
algorithms/sentiment_model/: fetch_and_format_sentiment140.py  format_youtube_data.py  logistic_model.py  sentiment_object.py  train_sentiment_model.py  youtube_sentiment.py
algorithms/sentiment_model/web_scraper/: CMakeLists.txt  main.cpp  scraper.cpp  scraper.h
backend_&_algorithms/: config.json  flask_api.py  install.sh  main.py
backend_&_algorithms/engine/: __init__.py  requirements.txt
backend_&_algorithms/testing/: test_ib_connection.py
data/: MSFT.csv  youtube_data.raw
data/output/: gru_prediction.out  sentiment_analysis.out
engine/: __init__.py
engine/sentiment_model/: api.py  download_dataset.py  test.py
engine/trading_simulation/: __init__.py  engine.py  orders.py  portfolio.py  strategies.py
engine/tsr_model/: README.md  __init__.py  (+7 more)
integrations/: config.json  scheduler.py  scheduler.py.tmp.43255.1757347670412
integrations_&_strategy/: =0.9.86  README.md  automated_trader.py  config.json  ib_interface.py  portfolio_state_ib_paper.json  portfolio_state_simulation.json  requirements.txt  schedule_trader.py  trading_decisions_simulation.json
(+55 files in other folders)
